[project]
name = "persona-ui"
version = "0.5.1"
description = "Streamlit UI for persona-vectors"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "persona-vectors>=0.8.9",
    "datasets>=4.8.5",
    "huggingface-hub>=1.14.0",
    "streamlit>=1.44.0",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "catppuccin>=2.5.0",
    "safetensors>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# Local development:
# [tool.uv.sources]
# persona-vectors = { path = "../persona-vectors", editable = true }
# persona-data = { path = "../persona-data", editable = true }

# [build-system]
# requires = ["uv_build>=0.11.3,<0.12"]
# build-backend = "uv_build"
